implemented remember me
if checked will autofill with information