@@ -1,2 +1,4 @@
 # Project
  Programming 2 membership project
+
+ to run jar file run ... in command line: java --module-path "D:\JavaStuff\javafx-sdk-22.0.1\lib" --add-modules javafx.controls,javafx.fxml -jar "Project.jar"
